k8s/rabbitmq-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: mcce-g1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
        serviceAccount: rabbitmq-sa
    spec:
      serviceAccountName: rabbitmq-sa
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 999    # RabbitMQ group
        runAsUser: 999  # RabbitMQ user
        runAsGroup: 999 # RabbitMQ group
        runAsNonRoot: true
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management
        ports:
        - containerPort: 5672  # AMQP port
        - containerPort: 15672 # Management UI port
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
