k8s/rabbitmq-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
    serviceAccount: rabbitmq-sa
spec:
  selector:
    app: rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-management
  labels:
    app: rabbitmq
    serviceAccount: rabbitmq-sa
spec:
  selector:
    app: rabbitmq
  ports:
    - name: management
      port: 15672
      targetPort: 15672
  type: LoadBalancer
